# clion-clangd-dfa

./: .clang-tidy  CMakeLists.txt  LocalVariableEscapesScope.cpp  MissingReturn.cpp  NotInitializedVariable.cpp  README.md  main.cpp  prepare-qodana.sh  qodana.yaml
ContextSensitiveAnalysis/: ArrayIndexOutOfBounds.cpp  ConstantCondition.cpp  ConstantFunctionResult.cpp  ConstantParameter.cpp  DanglingPointer.cpp  EndlessLoop.cpp  EscapeAnalysis.cpp  InfiniteRecursion.cpp  LoopCondition.cpp  MemoryLeak.cpp  NotInitializedField.cpp  NullDereferences.cpp  UnreachableCall.cpp  UnreachableCode.cpp  UnusedField.cpp  UnusedLocal.cpp  UnusedParameter.cpp  UnusedValue.cpp
exclude/: excluded.cpp
include/: library.h
inspection_results/lin/: GCC_OCDFA.xml
inspection_results/win/: MSVC_OCGlobalDFAInspection.xml
